loadbalancer-service.yaml
# loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer-service
spec:
  type: LoadBalancer
  selector:
    app: authservice # Default service, can be changed
  ports:
    - port: 80
      targetPort: 80
